// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldBillingProvider Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_billing_provider, {"context":"red hat"})",
    "value": "red hat",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_billing_provider, {"context":"aws"})",
    "value": "aws",
  },
]
`;

exports[`ToolbarFieldBillingProvider Component should handle updating sla through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "billing_provider": "red hat",
        "type": "SET_QUERY_RHSM_billing_provider",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldBillingProvider Component should handle updating sla through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "billing_provider": "dolor sit",
        "type": "SET_QUERY_RHSM_billing_provider",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldBillingProvider Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder_billing, {"context":"provider"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldBillingProvider"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"red hat"})",
        "value": "red hat",
      },
      {
        "selected": true,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"aws"})",
        "value": "aws",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder_billing, {"context":"provider"})"
  position="left"
  selectedOptions="aws"
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
